--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=StudyHub
 
 # MySQL Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/study_space
+spring.datasource.url=jdbc:mysql://localhost:3306/study_hub
 spring.datasource.username=root
 spring.datasource.password=T@msel881
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
