--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,7 @@
-spring.application.name=StudyHub
-
-# MySQL Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/study_hub
-spring.datasource.username=root
-spring.datasource.password=T@msel881
+# MySQL Database Configuration - Clever Cloud
+spring.datasource.url=jdbc:mysql://bipvjibtlh9quorirm72-mysql.services.clever-cloud.com:3306/bipvjibtlh9quorirm72
+spring.datasource.username=uzttjshnvtcjhmmz
+spring.datasource.password=3dKaxOcPwlofYej2TATh
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA / Hibernate Configuration
@@ -11,5 +9,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
+# Custom Roles
 role.admin=ADMIN
 role.user=USER
