--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,33 @@
 # MySQL Database Configuration - Clever Cloud
-spring.datasource.url=jdbc:mysql://bipvjibtlh9quorirm72-mysql.services.clever-cloud.com:3306/bipvjibtlh9quorirm72
-spring.datasource.username=uzttjshnvtcjhmmz
-spring.datasource.password=3dKaxOcPwlofYej2TATh
+#spring.datasource.url=jdbc:mysql://bipvjibtlh9quorirm72-mysql.services.clever-cloud.com:3306/bipvjibtlh9quorirm72
+#spring.datasource.username=uzttjshnvtcjhmmz
+#spring.datasource.password=3dKaxOcPwlofYej2TATh
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# application.properties
+
+spring.datasource.url=jdbc:mysql://caboose.proxy.rlwy.net:35143/railway
+spring.datasource.username=root
+spring.datasource.password=iDwZVuymXmKtIhWLtubcSjmDBkbPVGLH
+
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+
 
 # JPA / Hibernate Configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+# application.properties
+
+#spring.datasource.url=jdbc:mysql://root:iDwZVuymXmKtIhWLtubcSjmDBkbPVGLH@caboose.proxy.rlwy.net:35143/railway
+#
+#spring.datasource.username=root
+#spring.datasource.password=iDwZVuymXmKtIhWLtubcSjmDBkbPVGLH
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+
 
 # Custom Roles
 role.admin=ADMIN
